--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
+{% block title %}
+    Home
+{% endblock title %}
 {% block content %}
     <h1>This is the home page</h1>
     <p>You are logged in as {{ user }}</p>
-    <p><a href="{% url 'logout' %}">Logout</a></p>
+    <p>
+        <a href="{% url 'logout' %}">Logout</a>
+    </p>
 {% endblock content %}
