--- a/templates/base.html
+++ b/templates/base.html
@@ -2,99 +2,109 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="ReagenTree - Reagent Inventory System">
-        <meta name="author" content="Mian Chen">
-        <meta name="keywords"
-              content="ReagenTree, reagent, quality, inventory, management, system">
-        <title>
-            ReagenTree -
-            {% block title %}
-            {% endblock title %}
-        </title>
-        <!-- Add your CSS files here -->
-        <link rel="stylesheet"
-              href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
-        <link rel="stylesheet"
-              href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
-        {% block css %}
-        {% endblock css %}
-    </head>
-    <body>
-        <header>
-            <!-- Header content goes here -->
-            {% block header %}
-                <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-                    <div class="container-fluid">
-                        <a class="navbar-brand" href="#">
-                            <img src="{% static 'images/ReagenTree_Logo_320x320.png' %}"
-                                 alt="ReagenTree Logo"
-                                 width="40"
-                                 height="40" />
-                        </a>
-                        <button class="navbar-toggler"
-                                type="button"
-                                data-bs-toggle="collapse"
-                                data-bs-target="#navbarNav"
-                                aria-controls="navbarNav"
-                                aria-expanded="false"
-                                aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarNav">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">About</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Contact</a>
-                                </li>
-                            </ul>
-                            <ul class="navbar-nav ms-auto">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#"><i class="bi bi-qr-code"></i></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#"><i class="bi bi-search"></i></a>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle"
-                                       href="#"
-                                       id="userDropdown"
-                                       role="button"
-                                       data-bs-toggle="dropdown"
-                                       aria-expanded="false"><i class="bi bi-person-fill"></i></a>
-                                    <ul class="dropdown-menu dropdown-menu-end"
-                                        aria-labelledby="userDropdown">
-                                        <li>
-                                            <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
-            {% endblock header %}
-        </header>
-        <main style="padding-top: 80px;">
-            <!-- Main content goes here -->
-            {% block content %}
-            {% endblock content %}
-        </main>
-        <footer>
-            <!-- Footer content goes here -->
-            {% block footer %}
-            {% endblock footer %}
-        </footer>
-        <!-- Add your JavaScript files here -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-        {% block js %}
-        {% endblock js %}
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="ReagenTree - Reagent Inventory System" />
+    <meta name="author" content="Mian Chen" />
+    <meta name="keywords"
+          content="ReagenTree, reagent, quality, inventory, management, system" />
+    <title>
+      ReagenTree -
+      {% block title %}
+      {% endblock title %}
+    </title>
+    <!-- Add your CSS files here -->
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="{% static 'css/mystyle.css' %}" />
+    {% block css %}
+    {% endblock css %}
+  </head>
+  <body>
+    <header>
+      <!-- Header content goes here -->
+      {% block header %}
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+              <img src="{% static 'images/ReagenTree_Logo.png' %}"
+                   alt="ReagenTree Logo"
+                   width="40"
+                   height="40" />
+            </a>
+            <button class="navbar-toggler"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav"
+                    aria-controls="navbarNav"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'index' %}">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Contact</a>
+                </li>
+              </ul>
+              <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="#"><i class="bi bi-qr-code text-primary"></i> Scan</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#"><i class="bi bi-search text-secondary"></i> Search</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle"
+                     href="#"
+                     id="userDropdown"
+                     role="button"
+                     data-bs-toggle="dropdown"
+                     aria-expanded="false"><i class="bi bi-person-fill text-success"></i> User</a>
+                  <ul class="dropdown-menu dropdown-menu-end"
+                      aria-labelledby="userDropdown">
+                    <li>
+                      <div class="text-center">{{ request.user.first_name }} {{ request.user.last_name }}</div>
+                    </li>
+                    <li class="dropdown-divider"></li>
+                    <li>
+                      <a href="{% url 'user_profile' %}" class="dropdown-item"><i class="bi bi-person-square text-info"></i> Profile</a>
+                    </li>
+                    <li><a href="#" class="dropdown-item"><i class="bi bi-sliders text-success"></i> Settings</a></li>
+                    <li class="dropdown-divider"></li>
+                    <li>
+                      <a href="{% url 'logout' %}" class="dropdown-item"><i class="bi bi-box-arrow-right text-danger"></i> Logout</a>
+                    </li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      {% endblock header %}
+    </header>
+    <main style="padding-top: 75px;">
+      <!-- Main content goes here -->
+      {% block content %}
+      {% endblock content %}
+    </main>
+    <footer>
+      <!-- Footer content goes here -->
+      {% block footer %}
+      {% endblock footer %}
+    </footer>
+    <!-- Add your JavaScript files here -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    {% block js %}
+    {% endblock js %}
+  </body>
 </html>
