--- a/templates/base.html
+++ b/templates/base.html
@@ -15,11 +15,11 @@
       {% endblock title %}
     </title>
     <!-- Add your CSS files here -->
+    <link rel="stylesheet" href="{% static 'css/bootstrap-5.3.2.min.css' %}" />
     <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
+          href="{% static 'icons/bootstrap-icons-1.11.1.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/mystyle.css' %}" />
+    <style>main#main-content {padding-top: 75px;} /* top padding under the fixed navbar */</style>
     {% block css %}
     {% endblock css %}
   </head>
@@ -29,7 +29,9 @@
       {% block header %}
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand"
+               href="{% url 'index' %}"
+               title="ReagenTree Home Page">
               <img src="{% static 'images/ReagenTree_Logo.png' %}"
                    alt="ReagenTree Logo"
                    width="40"
@@ -47,13 +49,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'index' %}">Home</a>
+                  <a class="nav-link" href="{% url 'company_list' %}"><i class="bi bi-building-fill text-secondary"></i> Company</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
+                  <a class="nav-link" href="#">Item</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
+                  <a class="nav-link" href="#">Stock</a>
                 </li>
               </ul>
               <ul class="navbar-nav ms-auto">
@@ -79,7 +81,9 @@
                     <li>
                       <a href="{% url 'user_profile' %}" class="dropdown-item"><i class="bi bi-person-square text-info"></i> Profile</a>
                     </li>
-                    <li><a href="#" class="dropdown-item"><i class="bi bi-sliders text-success"></i> Settings</a></li>
+                    <li>
+                      <a href="#" class="dropdown-item"><i class="bi bi-sliders text-success"></i> Settings</a>
+                    </li>
                     <li class="dropdown-divider"></li>
                     <li>
                       <a href="{% url 'logout' %}" class="dropdown-item"><i class="bi bi-box-arrow-right text-danger"></i> Logout</a>
@@ -92,7 +96,7 @@
         </nav>
       {% endblock header %}
     </header>
-    <main style="padding-top: 75px;">
+    <main id="main-content">
       <!-- Main content goes here -->
       {% block content %}
       {% endblock content %}
@@ -103,7 +107,8 @@
       {% endblock footer %}
     </footer>
     <!-- Add your JavaScript files here -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'js/bootstrap-5.3.2-bundle.min.js' %}"></script>
+    <script src="{% static 'js/htmx-1.9.8.min.js' %}"></script>
     {% block js %}
     {% endblock js %}
   </body>
