--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
-{% block title %}User profile{% endblock title %}
+{% block title %}
+  User profile
+{% endblock title %}
 {% block content %}
-<div class="container">
+  <div class="container">
     <h1>User Profile</h1>
     {% block profile_form %}
     {% endblock profile_form %}
-</div>
+  </div>
 {% endblock content %}
