rename custom css

--- a/company/templates/company/company_list.html
+++ b/company/templates/company/company_list.html
@@ -3,27 +3,32 @@
   Company
 {% endblock title %}
 {% block content %}
-  <div class="container">
-    Company List
-    <br>
-    <a href="{% url 'company_create' %}">Add Company</a>
-    <ul>
-      {% for company in companies %}
-        <li>
-          <p>
-            <span class="h4">{{ company.name }}</span>
-            <span><a href="{% url 'company_update' company.pk %}"><i class="bi bi-pencil-square"></i></a> |
-              <a hx-get="{% url 'company_delete' company.pk %}"
-                 hx-trigger="click"
-                 hx-target="#deleteModal .modal-content"
-                 hx-swap="innerHTML"
-                 data-bs-toggle="modal"
-                 data-bs-target="#deleteModal"><i class="bi bi-trash text-danger"></i></a></span>
-          </p>
-          <p>{{ company.description }}</p>
-        </li>
-      {% endfor %}
-    </ul>
+  <div class="container-fluid">
+    <div class="panel">
+      <div class="panel-heading d-flex justify-content-between me-2">
+        <span class="h4">Company List</span>
+        <span><a href="{% url 'company_create' %}" class="btn btn-success"><i class="bi bi-plus-circle"></i> New Company</a></span>
+      </div>
+      <div class="panel-content">
+        <ul>
+          {% for company in companies %}
+            <li>
+              <p>
+                <span class="h4">{{ company.name }}</span>
+                <span><a href="{% url 'company_update' company.pk %}"><i class="bi bi-pencil-square"></i></a> |
+                  <a hx-get="{% url 'company_delete' company.pk %}"
+                     hx-trigger="click"
+                     hx-target="#deleteModal .modal-content"
+                     hx-swap="innerHTML"
+                     data-bs-toggle="modal"
+                     data-bs-target="#deleteModal"><i class="bi bi-trash text-danger"></i></a></span>
+              </p>
+              <p>{{ company.description }}</p>
+            </li>
+          {% endfor %}
+        </ul>
+      </div>
+    </div>
   </div>
   <!-- Delete Modal -->
   <div class="modal fade"
