--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap-5.3.2.min.css' %}" />
     <link rel="stylesheet"
           href="{% static 'icons/bootstrap-icons-1.11.1.min.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/mystyle.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/reagentree-1.0.css' %}" />
     <style>main#main-content {padding-top: 75px;} /* top padding under the fixed navbar */</style>
     {% block css %}
     {% endblock css %}
