--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,8 @@
   <h4>Links to all apps</h4>
   <p>
     <a href="{% url 'company_list' %}">Company</a> | 
-    <a href="{% url 'location_list' %}">Location</a> |    
+    <a href="{% url 'location_list' %}">Location</a> |  
+    <a href="{% url 'category_list' %}">Category</a> |  
   </p>
   <div class="p-3 mb-2 bg-primary text-white">Primary</div>
   <div class="p-3 mb-2 bg-secondary text-white">Secondary</div>
