--- a/delivery/templates/delivery/delivery_list.html
+++ b/delivery/templates/delivery/delivery_list.html
@@ -1,29 +1,30 @@
 {% extends "base.html" %}
 {% block title %}
-  Company
+  Deliveries
 {% endblock title %}
 {% block content %}
   <div class="container-fluid">
     <div class="panel">
       <div class="panel-heading d-flex justify-content-between me-2">
-        <span class="h4">Company List</span>
-        <span><a href="{% url 'company_create' %}" class="btn btn-success"><i class="bi bi-plus-circle"></i> New company</a></span>
+        <span class="h4">Deliveries</span>
+        <span><a href="{% url 'delivery_create' %}" class="btn btn-success"><i class="bi bi-plus-circle"></i> New delivery</a></span>
       </div>
       <div class="panel-content">
         <ul>
-          {% for company in companies %}
+          {% for delivery in deliveries %}
             <li>
               <p>
-                <span class="h4">{{ company.name }}</span>
-                <span><a href="{% url 'company_update' company.pk %}"><i class="bi bi-pencil-square"></i></a> |
-                  <a hx-get="{% url 'company_delete' company.pk %}"
+                <span class="h4">{{ delivery.delivery_date|date:'d/m/Y' }}</span>
+                <span class="h5">{{ delivery.received_by.first_name }}</span>
+                <span><a href="{% url 'delivery_update' delivery.pk %}"><i class="bi bi-pencil-square"></i></a> |
+                  <a hx-get="{% url 'delivery_delete' delivery.pk %}"
                      hx-trigger="click"
                      hx-target="#deleteModal .modal-content"
                      hx-swap="innerHTML"
                      data-bs-toggle="modal"
                      data-bs-target="#deleteModal"><i class="bi bi-trash text-danger"></i></a></span>
               </p>
-              <p>{{ company.description }}</p>
+              <p>{{ location.description }}</p>
             </li>
           {% endfor %}
         </ul>
