stock create working

--- a/item/templates/item/item_create.html
+++ b/item/templates/item/item_create.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 {% block title %}
-  Delivery
+  Item
 {% endblock title %}
 {% block content %}
   <div class="container">
-    Delivery Create
+    Item Create
     <form method="post">
       {% csrf_token %}
       <input type="hidden" name="next" value="{{ request.GET.next }}">
