--- a/item/templates/item/item_update.html
+++ b/item/templates/item/item_update.html
@@ -5,12 +5,11 @@
 {% endblock title %}
 {% block content %}
   <div class="container">
-    Delivery Create
+    Delivery Update
     <form method="post">
       {% csrf_token %}
-      <input type="hidden" name="next" value="{{ request.GET.next }}">
       {{ form|crispy }}
-      <button type="submit">Create</button>
+      <button type="submit">Update</button>
     </form>
   </div>
 {% endblock content %}
