--- a/templates/base.html
+++ b/templates/base.html
@@ -48,14 +48,40 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle"
+                     href="#"
+                     id="stockDropdown"
+                     role="button"
+                     data-bs-toggle="dropdown"
+                     aria-expanded="false"><i class="bi bi-inboxes-fill text-success"></i> Stock</a>
+                  <ul class="dropdown-menu" aria-labelledby="userDropdown">
+                    <li>
+                      <a href="{% url 'stock_create' %}" class="dropdown-item"><i class="bi bi-inbox-fill text-success"></i> New Stock</a>
+                    </li>
+                    <li>
+                      <a href="{% url 'stock_list' %}" class="dropdown-item"><i class="bi bi-boxes text-secondary"></i> Stock List</a>
+                    </li>
+                  </ul>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle"
+                     href="#"
+                     id="itemDropdown"
+                     role="button"
+                     data-bs-toggle="dropdown"
+                     aria-expanded="false"><i class="bi bi-box2-fill text-primary"></i> Item</a>
+                  <ul class="dropdown-menu" aria-labelledby="userDropdown">
+                    <li>
+                      <a href="{% url 'item_create' %}" class="dropdown-item"><i class="bi bi-box-seam text-primary"></i> New Item</a>
+                    </li>
+                    <li>
+                      <a href="{% url 'item_list' %}" class="dropdown-item"><i class="bi bi-box2 text-warning"></i> Item List</a>
+                    </li>
+                  </ul>
+                </li>
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'company_list' %}"><i class="bi bi-building-fill text-secondary"></i> Company</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Item</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Stock</a>
                 </li>
               </ul>
               <ul class="navbar-nav ms-auto">
@@ -109,6 +135,7 @@
     <!-- Add your JavaScript files here -->
     <script src="{% static 'js/bootstrap-5.3.2-bundle.min.js' %}"></script>
     <script src="{% static 'js/htmx-1.9.8.min.js' %}"></script>
+    <script src="{% static 'js/reagentree-1.0.js' %}"></script>
     {% block js %}
     {% endblock js %}
   </body>
