--- a/templates/index.html
+++ b/templates/index.html
@@ -18,17 +18,19 @@
           <a href="{% url 'location_list' %}">Location</a> |
           <a href="{% url 'category_list' %}">Category</a> |
           <a href="{% url 'delivery_list' %}">Delivery</a> |
+          <a href="{% url 'item_list' %}">Item</a> |
+          <a href="{% url 'stock_list' %}">Stock</a> |
         </p>
         <div class="row">
-        <div class="col-1 p-3 mb-2 bg-primary text-white">Primary</div>
-        <div class="col-1 p-3 mb-2 bg-secondary text-white">Secondary</div>
-        <div class="col-1 p-3 mb-2 bg-success text-white">Success</div>
-        <div class="col-1 p-3 mb-2 bg-danger text-white">Danger</div>
-        <div class="col-1 p-3 mb-2 bg-warning text-dark">Warning</div>
-        <div class="col-1 p-3 mb-2 bg-info text-dark">Info</div>
-        <div class="col-1 p-3 mb-2 bg-light text-dark">Light</div>
-        <div class="col-1 p-3 mb-2 bg-dark text-white">Dark</div>
-      </div>
+          <div class="col-1 p-3 mb-2 bg-primary text-white">Primary</div>
+          <div class="col-1 p-3 mb-2 bg-secondary text-white">Secondary</div>
+          <div class="col-1 p-3 mb-2 bg-success text-white">Success</div>
+          <div class="col-1 p-3 mb-2 bg-danger text-white">Danger</div>
+          <div class="col-1 p-3 mb-2 bg-warning text-dark">Warning</div>
+          <div class="col-1 p-3 mb-2 bg-info text-dark">Info</div>
+          <div class="col-1 p-3 mb-2 bg-light text-dark">Light</div>
+          <div class="col-1 p-3 mb-2 bg-dark text-white">Dark</div>
+        </div>
       </div>
     </div>
   </div>
