--- a/location/templates/location/location_create.html
+++ b/location/templates/location/location_create.html
@@ -9,6 +9,7 @@
     <form method="post">
       {% csrf_token %}
       {{ form|crispy }}
+      <input type="hidden" name="next" value="{{ request.GET.next }}">
       <button type="submit">Create</button>
     </form>
   </div>
