--- a/delivery/templates/delivery/delivery_create.html
+++ b/delivery/templates/delivery/delivery_create.html
@@ -1,16 +1,11 @@
-{% extends "base.html" %}
+{% extends "object_create_base.html" %}
 {% load crispy_forms_tags %}
 {% block title %}
   Delivery
 {% endblock title %}
-{% block content %}
-  <div class="container">
-    Delivery Create
-    <form method="post">
-      {% csrf_token %}
-      <input type="hidden" name="next" value="{{ request.GET.next }}">
-      {{ form|crispy }}
-      <button type="submit">Create</button>
-    </form>
-  </div>
-{% endblock content %}
+{% block panel_title %}
+  Delivery Create
+{% endblock panel_title %}
+{% block create_form %}
+  {{ form|crispy }}
+{% endblock create_form %}
