--- a/delivery/templates/delivery/delivery_list.html
+++ b/delivery/templates/delivery/delivery_list.html
@@ -10,24 +10,34 @@
         <span><a href="{% url 'delivery_create' %}" class="btn btn-success"><i class="bi bi-plus-circle"></i> New delivery</a></span>
       </div>
       <div class="panel-content">
-        <ul>
-          {% for delivery in deliveries %}
-            <li>
-              <p>
-                <span class="h4">{{ delivery.delivery_date|date:'d/m/Y H:i:s' }}</span>
-                <span class="h5">{{ delivery.received_by.first_name }}</span>
-                <span><a href="{% url 'delivery_update' delivery.pk %}"><i class="bi bi-pencil-square"></i></a> |
-                  <a hx-get="{% url 'delivery_delete' delivery.pk %}"
-                     hx-trigger="click"
-                     hx-target="#deleteModal .modal-content"
-                     hx-swap="innerHTML"
-                     data-bs-toggle="modal"
-                     data-bs-target="#deleteModal"><i class="bi bi-trash text-danger"></i></a></span>
-              </p>
-              <p>{{ location.description }}</p>
-            </li>
-          {% endfor %}
-        </ul>
+        <div class="row my-2 px-2">
+          <div class="border-bottom col col-lg-2"><b>Delivery Date</b></div>
+          <div class="border-bottom col col-lg-1"><b>Received</b></div>
+          <div class="border-bottom col col-lg-2"><b>Notes</b></div>
+          <div class="border-bottom col col-lg-6"><b>Items</b></div>
+          <div class="border-bottom col col-lg-1"><b>Actions</b></div>
+        </div>
+        {% for delivery in deliveries %}
+          <div class="row my-2 px-2">
+            <div class="border-bottom col col-lg-2">{{ delivery.delivery_date }}</div>
+            <div class="border-bottom col col-lg-1">{{ delivery.received_by.first_name }}</div>
+            <div class="border-bottom col col-lg-2">{{ delivery.notes }}</div>
+            <div class="border-bottom col col-lg-6">{{ delivery.stock_items.all }}</div>
+            <div class="border-bottom col col-lg-1">
+              <span class="px-2">
+                <a href="{% url 'delivery_update' delivery.pk %}"><i class="bi bi-pencil-square"></i></a>
+              </span>
+              <span class="px-2">
+                <a hx-get="{% url 'delivery_delete' delivery.pk %}"
+                   hx-trigger="click"
+                   hx-target="#deleteModal .modal-content"
+                   hx-swap="innerHTML"
+                   data-bs-toggle="modal"
+                   data-bs-target="#deleteModal"><i class="bi bi-trash text-danger"></i></a>
+              </span>
+            </div>
+          </div>
+        {% endfor %}
       </div>
     </div>
   </div>
