--- a/item/templates/item/stockitem_list.html
+++ b/item/templates/item/stockitem_list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load stock_tags %}
 {% block title %}
   Stock Items
 {% endblock title %}
@@ -10,24 +11,54 @@
         <span><a href="{% url 'stock_create' %}" class="btn btn-success"><i class="bi bi-plus-circle"></i> New stock</a></span>
       </div>
       <div class="panel-content">
-        <ul>
-          {% for stock in stockitems %}
-            <li>
-              <p>
-                <span class="h4">{{ stock.item.name }}</span>
-                <span class="h5">({{ stock.delivery.delivery_date }})</span>
-                <span><a href="{ url 'stock_update' stock.pk }"><i class="bi bi-pencil-square"></i></a> |
-                  <a hx-get="{ url 'stock_delete' stock.pk }"
-                     hx-trigger="click"
-                     hx-target="#deleteModal .modal-content"
-                     hx-swap="innerHTML"
-                     data-bs-toggle="modal"
-                     data-bs-target="#deleteModal"><i class="bi bi-trash text-danger"></i></a></span>
-              </p>
-              <p>{{ location.description }}</p>
-            </li>
-          {% endfor %}
-        </ul>
+        <div class="row my-2 px-2">
+          <div class="border-bottom col col-lg-2">
+            <b>Item</b>
+          </div>
+          <div class="border-bottom col col-lg-1">
+            <b>Box ID</b>
+          </div>
+          <div class="border-bottom col col-lg-1">
+            <b>Level</b>
+          </div>
+          <div class="border-bottom col col-lg-1">
+            <b>Lot Number</b>
+          </div>
+          <div class="border-bottom col col-lg-1">
+            <b>Expiry Date</b>
+          </div>
+          <div class="border-bottom col col-lg-1">
+            <b>Delivery</b>
+          </div>
+          <div class="border-bottom col col-lg-2">
+            <b>Location</b>
+          </div>
+          <div class="border-bottom col col-lg-1">
+            <b>Actions</b>
+          </div>
+        </div>
+        {% for stock in stockitems %}
+          <div class="row my-2 px-2">
+            <div class="border-bottom col col-lg-2">{{ stock.item.name }}</div>
+            <div class="border-bottom col col-lg-1">{{ stock.ordinal_number }}</div>
+            <div class="border-bottom col col-lg-1">stock level</div>
+            <div class="border-bottom col col-lg-1">{{ stock.lot_number }}</div>
+            <div class="border-bottom col col-lg-1">{{ stock.expiry_date|date:'d/m/Y' }}</div>
+            <div class="border-bottom col col-lg-1">
+              <a href="{% url 'delivery_detail' pk=stock.delivery.pk %}">{{ stock.delivery.delivery_date|date:'d/m/Y' }}</a>
+              {% delivery_condicon stock.delivery_condition %}
+            </div>
+            <div class="border-bottom col col-lg-2">{{ stock.location.name }}</div>
+            <div class="border-bottom col col-lg-1">
+              <span class="px-2">
+                <i class="bi bi-pencil-square"></i>
+              </span>
+              <span class="px-2">
+                <i class="bi bi-trash text-danger"></i>
+              </span>
+            </div>
+          </div>
+        {% endfor %}
       </div>
     </div>
   </div>
