--- a/location/templates/location/location_list.html
+++ b/location/templates/location/location_list.html
@@ -10,23 +10,32 @@
         <span><a href="{% url 'location_create' %}" class="btn btn-success"><i class="bi bi-plus-circle"></i> New location</a></span>
       </div>
       <div class="panel-content">
-        <ul>
-          {% for location in locations %}
-            <li>
-              <p>
-                <span class="h4">{{ location.name }}</span>
-                <span><a href="{% url 'location_update' location.pk %}"><i class="bi bi-pencil-square"></i></a> |
-                  <a hx-get="{% url 'location_delete' location.pk %}"
-                     hx-trigger="click"
-                     hx-target="#deleteModal .modal-content"
-                     hx-swap="innerHTML"
-                     data-bs-toggle="modal"
-                     data-bs-target="#deleteModal"><i class="bi bi-trash text-danger"></i></a></span>
-              </p>
-              <p>{{ location.description }}</p>
-            </li>
-          {% endfor %}
-        </ul>
+        <div class="row my-2 px-2">
+          <div class="border-bottom col col-lg-3"><b>Location Name</b></div>
+          <div class="border-bottom col col-lg-3"><b>Description</b></div>
+          <div class="border-bottom col col-lg-5"><b>Stock Items</b></div>
+          <div class="border-bottom col col-lg-1"><b>Actions</b></div>
+        </div>
+        {% for location in locations %}
+          <div class="row my-2 px-2">
+            <div class="border-bottom col col-lg-3">{{ location.name }}</div>
+            <div class="border-bottom col col-lg-3">{{ location.description }}</div>
+            <div class="border-bottom col col-lg-5">{{ location.stock_items.all }}</div>
+            <div class="border-bottom col col-lg-1">
+              <span class="px-2">
+                <a href="{% url 'location_update' location.pk %}"><i class="bi bi-pencil-square"></i></a>
+              </span>
+              <span class="px-2">
+                <a hx-get="{% url 'location_delete' location.pk %}"
+                   hx-trigger="click"
+                   hx-target="#deleteModal .modal-content"
+                   hx-swap="innerHTML"
+                   data-bs-toggle="modal"
+                   data-bs-target="#deleteModal"><i class="bi bi-trash text-danger"></i></a>
+              </span>
+            </div>
+          </div>
+        {% endfor %}
       </div>
     </div>
   </div>
