--- a/templates/navbar_menu_start.html
+++ b/templates/navbar_menu_start.html
@@ -5,13 +5,13 @@
        id="stockDropdown"
        role="button"
        data-bs-toggle="dropdown"
-       aria-expanded="false"><i class="bi bi-truck text-danger"></i> Delivery</a>
+       aria-expanded="false"><i class="bi bi-truck"></i> Delivery</a>
     <ul class="dropdown-menu" aria-labelledby="userDropdown">
       <li>
-        <a href="{% url 'delivery_create' %}" class="dropdown-item"><i class="bi bi-cart3 text-success"></i> New Deilvery</a>
+        <a href="{% url 'delivery_create' %}" class="dropdown-item"><i class="bi bi-cart-plus-fill"></i> New Delivery</a>
       </li>
       <li>
-        <a href="{% url 'delivery_list' %}" class="dropdown-item"><i class="bi bi-cart4 text-secondary"></i> Delivery List</a>
+        <a href="{% url 'delivery_list' %}" class="dropdown-item"><i class="bi bi-boxes"></i> Deliveries</a>
       </li>
     </ul>
   </li>
@@ -21,48 +21,35 @@
        id="stockDropdown"
        role="button"
        data-bs-toggle="dropdown"
-       aria-expanded="false"><i class="bi bi-inboxes-fill text-success"></i> Stock</a>
+       aria-expanded="false"><i class="bi bi-box-seam-fill"></i> Stock</a>
     <ul class="dropdown-menu" aria-labelledby="userDropdown">
       <li>
-        <a href="{% url 'stock_create' %}" class="dropdown-item"><i class="bi bi-inbox-fill text-success"></i> New Stock</a>
+        <a href="{% url 'stock_create' %}" class="dropdown-item"><i class="bi bi-clipboard2-plus"></i> New Stock</a>
       </li>
       <li>
-        <a href="{% url 'stock_list' %}" class="dropdown-item"><i class="bi bi-boxes text-secondary"></i> Stock List</a>
+        <a href="{% url 'stock_list' %}" class="dropdown-item"><i class="bi bi-boxes"></i> Stocks</a>
       </li>
     </ul>
-  </li>
-  <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle"
-       href="#"
-       id="itemDropdown"
-       role="button"
-       data-bs-toggle="dropdown"
-       aria-expanded="false"><i class="bi bi-box2-fill text-primary"></i> Item</a>
-    <ul class="dropdown-menu" aria-labelledby="userDropdown">
-      <li>
-        <a href="{% url 'item_create' %}" class="dropdown-item"><i class="bi bi-box-seam text-primary"></i> New Item</a>
-      </li>
-      <li>
-        <a href="{% url 'item_list' %}" class="dropdown-item"><i class="bi bi-box2 text-warning"></i> Item List</a>
-      </li>
-    </ul>
-  </li>
+  </li>  
   <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle"
        href="#"
        id="stockDropdown"
        role="button"
        data-bs-toggle="dropdown"
-       aria-expanded="false"><i class="bi bi-database-gear text-info"></i> Settings</a>
+       aria-expanded="false"><i class="bi bi-database-gear"></i> Settings</a>
     <ul class="dropdown-menu" aria-labelledby="userDropdown">
       <li>
-        <a href="{% url 'company_list' %}" class="dropdown-item"><i class="bi bi-buildings text-danger"></i> Companies</a>
+        <a href="{% url 'item_list' %}" class="dropdown-item"><i class="bi bi-box2-fill"></i> Items</a>
       </li>
       <li>
-        <a href="{% url 'category_list' %}" class="dropdown-item"><i class="bi bi-tags text-secondary"></i> Categories</a>
+        <a href="{% url 'company_list' %}" class="dropdown-item"><i class="bi bi-buildings"></i> Companies</a>
       </li>
       <li>
-        <a href="{% url 'location_list' %}" class="dropdown-item"><i class="bi bi-crosshair text-primary"></i> Locations</a>
+        <a href="{% url 'category_list' %}" class="dropdown-item"><i class="bi bi-tags-fill"></i> Categories</a>
+      </li>
+      <li>
+        <a href="{% url 'location_list' %}" class="dropdown-item"><i class="bi bi-crosshair"></i> Locations</a>
       </li>
     </ul>
   </li>
