--- a/templates/object_create_base.html
+++ b/templates/object_create_base.html
@@ -2,7 +2,7 @@
 {% block title %}
 {% endblock title %}
 {% block content %}
-  <div class="container-fluid">
+  <div class="container">
     <div class="panel">
       <div class="panel-heading">
         <h3 class="panel-title">
