--- a/category/templates/category/category_list.html
+++ b/category/templates/category/category_list.html
@@ -10,23 +10,39 @@
         <span><a href="{% url 'category_create' %}" class="btn btn-success"><i class="bi bi-plus-circle"></i> New category</a></span>
       </div>
       <div class="panel-content">
-        <ul>
-          {% for category in categories %}
-            <li>
-              <p>
-                <span class="h4">{{ category.name }}</span>
-                <span><a href="{% url 'category_update' category.pk %}"><i class="bi bi-pencil-square"></i></a> |
-                  <a hx-get="{% url 'category_delete' category.pk %}"
-                     hx-trigger="click"
-                     hx-target="#deleteModal .modal-content"
-                     hx-swap="innerHTML"
-                     data-bs-toggle="modal"
-                     data-bs-target="#deleteModal"><i class="bi bi-trash text-danger"></i></a></span>
-              </p>
-              <p>{{ location.description }}</p>
-            </li>
-          {% endfor %}
-        </ul>
+        <div class="row my-2 px-2">
+          <div class="border-bottom col col-lg-2">
+            <b>Categories</b>
+          </div>
+          <div class="border-bottom col col-lg-3">
+            <b>Description</b>
+          </div>
+          <div class="border-bottom col col-lg-6">
+            <b>Items</b>
+          </div>
+          <div class="border-bottom col col-lg-1 d-none d-lg-block">
+            <b>Actions</b>
+          </div>
+        </div>
+        {% for category in categories %}
+          <div class="row my-2 px-2">
+            <div class="border-bottom col col-lg-2">{{ category.name }}</div>
+            <div class="border-bottom col col-lg-3">{{ category.description }}</div>
+            <div class="border-bottom col col-lg-6">{{ category.items.all }}</div>
+            <div class="border-bottom col col-lg-1 d-none d-lg-block">
+              <span class="px-2"><a href="{% url 'category_update' pk=category.pk %}"><i class="bi bi-pencil-square"></i></a></span>
+              <span class="px-2">
+                <a hx-get="{% url 'category_delete' category.pk %}"
+                   hx-trigger="click"
+                   hx-target="#deleteModal .modal-content"
+                   hx-swap="innerHTML"
+                   data-bs-toggle="modal"
+                   data-bs-target="#deleteModal"
+                   href="javascript:void(0);"><i class="bi bi-trash"></i></a>
+              </span>
+            </div>
+          </div>
+        {% endfor %}
       </div>
     </div>
   </div>
