--- a/company/templates/company/company_list.html
+++ b/company/templates/company/company_list.html
@@ -10,23 +10,46 @@
         <span><a href="{% url 'company_create' %}" class="btn btn-success"><i class="bi bi-plus-circle"></i> New company</a></span>
       </div>
       <div class="panel-content">
-        <ul>
-          {% for company in companies %}
-            <li>
-              <p>
-                <span class="h4">{{ company.name }}</span>
-                <span><a href="{% url 'company_update' company.pk %}"><i class="bi bi-pencil-square"></i></a> |
-                  <a hx-get="{% url 'company_delete' company.pk %}"
-                     hx-trigger="click"
-                     hx-target="#deleteModal .modal-content"
-                     hx-swap="innerHTML"
-                     data-bs-toggle="modal"
-                     data-bs-target="#deleteModal"><i class="bi bi-trash text-danger"></i></a></span>
-              </p>
-              <p>{{ company.description }}</p>
-            </li>
-          {% endfor %}
-        </ul>
+        <div class="row my-2 px-2">
+          <div class="border-bottom col col-lg-2">
+            <b>Categories</b>
+          </div>
+          <div class="border-bottom col col-lg-2">
+            <b>Description</b>
+          </div>
+          <div class="border-bottom col col-lg-7">
+            <b><span class="px-2 rounded bg-success">Supplied</span>/<span class="px-2 rounded bg-warning">Manufactured</span> Items</b>
+          </div>
+          <div class="border-bottom col col-lg-1 d-none d-lg-block">
+            <b>Actions</b>
+          </div>
+        </div>
+        {% for company in companies %}
+          <div class="row my-2 px-2">
+            <div class="border-bottom col col-lg-2">{{ company.name }}</div>
+            <div class="border-bottom col col-lg-2">{{ company.description }}</div>
+            <div class="border-bottom col col-lg-7">
+              {% for items in company.supplied_items.all %}
+                <span class="px-2 badge bg-success"><a href="{% url 'item_detail' items.pk %}">{{ items.name }}</a></span>
+              {% endfor %}
+              {% for items in company.manufactured_items.all %}
+                <span class="px-2 badge bg-warning"><a href="{% url 'item_detail' items.pk %}">{{ items.name }}</a></span>
+              {% endfor %}
+            </div>
+            <div class="border-bottom col col-lg-1 d-none d-lg-block">
+              <span class="px-2"><a href="{% url 'company_update' company.pk %}"><i class="bi bi-pencil-square"></i></a></span>
+              <span class="px-2">
+                <a hx-get="{% url 'company_delete' company.pk %}"
+                   hx-trigger="click"
+                   hx-target="#deleteModal .modal-content"
+                   hx-swap="innerHTML"
+                   data-bs-toggle="modal"
+                   data-bs-target="#deleteModal"
+                   href="javascript:void(0);"><i class="bi bi-trash"></i></a>
+              </span>
+            </div>
+          </div>
+        {% endfor %}
       </div>
     </div>
   </div>
