--- a/delivery/templates/delivery/delivery_list.html
+++ b/delivery/templates/delivery/delivery_list.html
@@ -11,19 +11,42 @@
       </div>
       <div class="panel-content">
         <div class="row my-2 px-2">
-          <div class="border-bottom col col-lg-2"><b>Delivery Date</b></div>
-          <div class="border-bottom col col-lg-1"><b>Received</b></div>
-          <div class="border-bottom col col-lg-2"><b>Notes</b></div>
-          <div class="border-bottom col col-lg-6"><b>Items</b></div>
-          <div class="border-bottom col col-lg-1"><b>Actions</b></div>
+          <div class="border-bottom col col-lg-2">
+            <b>Delivery Date</b>
+          </div>
+          <div class="border-bottom col col-lg-1">
+            <b>Received</b>
+          </div>
+          <div class="border-bottom col col-lg-2">
+            <b>Notes</b>
+          </div>
+          <div class="border-bottom col col-lg-6">
+            <b>Items</b>
+          </div>
+          <div class="border-bottom col col-lg-1 d-none d-lg-block">
+            <b>Actions</b>
+          </div>
         </div>
         {% for delivery in deliveries %}
           <div class="row my-2 px-2">
-            <div class="border-bottom col col-lg-2">{{ delivery.delivery_date }}</div>
+            <div class="border-bottom col col-lg-2">
+              <a href="{% url 'delivery_detail' delivery.pk %}"
+                 title="Delivery details">{{ delivery.delivery_date|date:"d/m/Y H:i" }}</a>
+            </div>
             <div class="border-bottom col col-lg-1">{{ delivery.received_by.first_name }}</div>
             <div class="border-bottom col col-lg-2">{{ delivery.notes }}</div>
-            <div class="border-bottom col col-lg-6">{{ delivery.stock_items.all }}</div>
-            <div class="border-bottom col col-lg-1">
+            <div class="border-bottom col col-lg-6">
+              {% if delivery.within_one_week %}
+                <a class="btn btn-sm"
+                   href="{% url 'stock_create' %}?delivery={{ delivery.pk }}&next={{ request.path }}"
+                   title="Add stock items">
+                  <i class="bi bi-plus-circle-dotted text-success"></i></a>
+              {% endif %}
+              {% for stockitem in delivery.stock_items.all %}
+                <span class="px-1 small bg-light">{{ stockitem.item.name }}</span>
+              {% endfor %}
+            </div>
+            <div class="border-bottom col col-lg-1 d-none d-lg-block">
               <span class="px-2">
                 <a href="{% url 'delivery_update' delivery.pk %}"><i class="bi bi-pencil-square"></i></a>
               </span>
@@ -33,7 +56,8 @@
                    hx-target="#deleteModal .modal-content"
                    hx-swap="innerHTML"
                    data-bs-toggle="modal"
-                   data-bs-target="#deleteModal"><i class="bi bi-trash text-danger"></i></a>
+                   data-bs-target="#deleteModal"
+                   href="javascript:void(0);"><i class="bi bi-trash"></i></a>
               </span>
             </div>
           </div>
