--- a/item/templates/item/item_list.html
+++ b/item/templates/item/item_list.html
@@ -29,19 +29,28 @@
           <div class="border-bottom col col-lg-4">
             <b>Description</b>
           </div>
-          <div class="border-bottom col col-lg-1">
+          <div class="border-bottom col col-lg-1 d-none d-lg-block">
             <b>Actions</b>
           </div>
         </div>
         {% for item in items %}
           <div class="row my-2 px-2">
-            <div class="border-bottom col col-lg-3">{{ item.name }}</div>
+            <div class="border-bottom col col-lg-3">
+              <a href="{% url 'item_detail' item.pk %}" title="item details">{{ item.name }}</a>
+            </div>
             <div class="border-bottom col col-lg-1">{{ item.product_id }}</div>
-            <div class="border-bottom col col-lg-1">{{ item.category }}</div>
-            <div class="border-bottom col col-lg-1"><a href="{% url 'company_detail' pk=item.manufacturer.pk %}">{{ item.manufacturer }}</a></div>
-            <div class="border-bottom col col-lg-1"><a href="{% url 'company_detail' pk=item.supplier.pk %}">{{ item.supplier }}</a></div>
-            <div class="border-bottom col col-lg-4">{{ item.description }}</div>
             <div class="border-bottom col col-lg-1">
+              <a href="{% url 'category_detail' item.category.pk %}"
+                 title="item details">{{ item.category }}</a>
+            </div>
+            <div class="border-bottom col col-lg-1">
+              <a href="{% url 'company_detail' pk=item.manufacturer.pk %}">{{ item.manufacturer }}</a>
+            </div>
+            <div class="border-bottom col col-lg-1">
+              <a href="{% url 'company_detail' pk=item.supplier.pk %}">{{ item.supplier }}</a>
+            </div>
+            <div class="border-bottom col col-lg-4">{{ item.description }}</div>
+            <div class="border-bottom col col-lg-1 d-none d-lg-block">
               <span class="px-2">
                 <a href="{% url 'item_update' item.pk %}"><i class="bi bi-pencil-square"></i></a>
               </span>
@@ -51,7 +60,8 @@
                    hx-target="#deleteModal .modal-content"
                    hx-swap="innerHTML"
                    data-bs-toggle="modal"
-                   data-bs-target="#deleteModal"><i class="bi bi-trash text-danger"></i></a>
+                   data-bs-target="#deleteModal"
+                   href="javascript:void(0);"><i class="bi bi-trash"></i></a>
               </span>
             </div>
           </div>
