--- a/item/templates/item/stockitem_create.html
+++ b/item/templates/item/stockitem_create.html
@@ -21,8 +21,8 @@
              hx-target="#itemSearchResults">
       <span class="input-group-text">
         <a href="{% url 'item_create' %}?next={{ request.path }}"
-           class="btn btn-sm btn-light">
-          <i class="bi bi-plus-circle"></i>
+           class="btn btn-sm btn-light" title="Add a new item">
+          <i class="bi bi-plus-circle text-success"></i>
         </a>
       </span>
     </div>
@@ -57,7 +57,7 @@
     <span class="input-group-text">
       <a href="{% url 'delivery_create' %}?next={{ request.path }}"
          class="btn btn-sm btn-light">
-        <i class="bi bi-plus-circle"></i></a>
+        <i class="bi bi-plus-circle text-success"></i></a>
     </span>
   </div>
   {{ form.delivery.errors }}
@@ -88,7 +88,7 @@
     <span class="input-group-text">
       <a href="{% url 'location_create' %}?next={{ request.path }}"
          class="btn btn-sm btn-light">
-        <i class="bi bi-plus-circle"></i></a>
+        <i class="bi bi-plus-circle text-success"></i></a>
     </span>
   </div>
   {{ form.location.errors }}
