--- a/location/templates/location/location_list.html
+++ b/location/templates/location/location_list.html
@@ -14,14 +14,14 @@
           <div class="border-bottom col col-lg-3"><b>Location Name</b></div>
           <div class="border-bottom col col-lg-3"><b>Description</b></div>
           <div class="border-bottom col col-lg-5"><b>Stock Items</b></div>
-          <div class="border-bottom col col-lg-1"><b>Actions</b></div>
+          <div class="border-bottom col col-lg-1 d-none d-lg-block"><b>Actions</b></div>
         </div>
         {% for location in locations %}
           <div class="row my-2 px-2">
             <div class="border-bottom col col-lg-3">{{ location.name }}</div>
             <div class="border-bottom col col-lg-3">{{ location.description }}</div>
             <div class="border-bottom col col-lg-5">{{ location.stock_items.all }}</div>
-            <div class="border-bottom col col-lg-1">
+            <div class="border-bottom col col-lg-1 d-none d-lg-block">
               <span class="px-2">
                 <a href="{% url 'location_update' location.pk %}"><i class="bi bi-pencil-square"></i></a>
               </span>
@@ -31,7 +31,8 @@
                    hx-target="#deleteModal .modal-content"
                    hx-swap="innerHTML"
                    data-bs-toggle="modal"
-                   data-bs-target="#deleteModal"><i class="bi bi-trash text-danger"></i></a>
+                   data-bs-target="#deleteModal"
+                   href="javascript:void(0);"><i class="bi bi-trash"></i></a>
               </span>
             </div>
           </div>
