--- a/templates/navbar_menu_end.html
+++ b/templates/navbar_menu_end.html
@@ -11,7 +11,8 @@
        id="userDropdown"
        role="button"
        data-bs-toggle="dropdown"
-       aria-expanded="false"><i class="bi bi-person-fill"></i> User</a>
+       aria-expanded="false"
+       href="javascript:void(0);"><i class="bi bi-person-fill"></i> User</a>
     <ul class="dropdown-menu dropdown-menu-end"
         aria-labelledby="userDropdown">
       <li>
